# remotedesk-2

qt-host/: CMakeLists.txt  README.md
qt-host/include/common/: Protocol.h
qt-host/include/host/: App.h  AuthClient.h  CaptureAudio.h  CaptureVideo.h  IceConfig.h  InputInjector.h  SignalingClient.h  UiMainWindow.h  WebRtcPeer.h
qt-host/src/host/: App.cpp  AuthClient.cpp  CaptureAudio.cpp  CaptureVideo.cpp  InputInjector.cpp  SignalingClient.cpp  UiMainWindow.cpp  WebRtcPeer.cpp  main.cpp
